QEventDispatcherWin32: Check for WM_QT_SOCKETNOTIFIER on internal window only

Restrict the checking to the internal window handle to prevent it being
thrown off by other WM_USER messages used by applications.

Complements change 124b9a6ff89da8be83a256135ec6c4d0603e9a6f.

Task-number: QTBUG-62083
Change-Id: Ifb1b00e4ff70cb7e53873943e46cea0d72ff6257
Reviewed-by: Alex Trotsenko <alex1973tr@gmail.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>